<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="add_account">Add account</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="sign_in">Sign in</string>
    <string name="show_account_list">Show accounts</string>
    <string name="hide_account_list">Hide accounts</string>
    <string name="account_item">Switch to %1$s</string>
    <string name="selected_account">Signed in to %1$s</string>
    <string name="account_list">Account list</string>
    <string name="done_label">Done</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="time_placeholder">--</string>
    <string name="time_separator">:</string>
    <string name="radial_numbers_typeface">sans-serif</string>
    <string name="sans_serif">sans-serif</string>
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="photo_view_count" formatted="false">%d of %d</string>
    <string name="retry">Retry</string>
    <string name="failed">"Couldn't load image"</string>
    <string name="more_string">+%1$s</string>
    <string name="copy_email">Copy email address</string>
    <string name="copy_number">Copy phone number</string>
    <string name="action_label">Return</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="done">Done</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="quoted_text_font_color_string">@color/text_color_grey</string>
    <string name="long_string">looooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong</string>
    <string name="date">2888/88/88</string>
    <string name="compose_help_context">android_compose</string>
    <string name="conversation_list_help_context">android_conversation_list</string>
    <string name="conversation_view_help_context">android_conversation_view</string>
    <string name="wait_help_context">email_wait</string>
    <string name="main_help_context">email_ttl</string>
    <string name="trigger_compose_char">n</string>
    <string name="trigger_archive_char">d</string>
    <string name="trigger_delete_char">\u0008</string>
    <string name="trigger_send_char">"
"</string>
    <string name="trigger_save_char">s</string>
    <string name="trigger_refresh_char">u</string>
    <string name="trigger_toggle_drawer_char">m</string>
    <string name="trigger_settings_char">,</string>
    <string name="trigger_help_char">/</string>
    <string name="trigger_reply_char">`</string>
    <string name="trigger_reply_all_char">r</string>
    <string name="trigger_toggle_read_unread_char">i</string>
    <string name="trigger_change_label_char">l</string>
    <string name="trigger_print_char">p</string>
    <string name="trigger_undo_char">z</string>
    <string name="mock_content_provider">Mock Content Provider</string>
    <string name="conversation_content_provider">Conversation Content Provider</string>
    <string name="account_cache_provider">Account Cache Provider</string>
    <string name="app_name">Gmail</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="subject_hint">Subject</string>
    <string name="body_hint">Compose email</string>
    <string name="add_file_attachment">Attach file</string>
    <string name="add_photo_attachment">Attach picture</string>
    <string name="attach_from_service_stub1">Insert from Drive</string>
    <string name="save_draft">Save draft</string>
    <string name="discard">Discard</string>
    <string name="compose">Compose</string>
    <string name="compose_title">Compose</string>
    <string name="formatted_subject">%1$s %2$s</string>
    <string name="reply_subject_label">Re:</string>
    <string name="forward_subject_label">Fwd:</string>
    <string name="reply_attribution" formatted="false">On %s, %s wrote:</string>
    <string name="forward_attribution">---------- Forwarded message ----------&lt;br>From: %1$s&lt;br>Date: %2$s&lt;br>Subject: %3$s&lt;br>To: %4$s&lt;br></string>
    <string name="forward_attribution_no_headers">---------- Forwarded message ----------</string>
    <string name="cc_attribution">Cc: %1$s&lt;br></string>
    <string name="select_attachment_type">Choose type of attachment</string>
    <string name="too_large_to_attach_single">"Can't attach file over %1$s."</string>
    <string name="too_large_to_attach_multiple">One or more files not attached. Limit %1$s.</string>
    <string name="too_large_to_attach_additional">File not attached. %1$s limit reached.</string>
    <string name="generic_attachment_problem">"Couldn't attach file."</string>
    <string name="attachment_permission_denied">Permission denied for the attachment.</string>
    <string name="recipient_needed">Add at least one recipient.</string>
    <string name="confirm_send_message_with_no_subject">"There's no text in the message subject."</string>
    <string name="confirm_send_message_with_no_body">"There's no text in the message body."</string>
    <string name="confirm_send_message">Send this message?</string>
    <string name="message_discarded">Message discarded.</string>
    <string name="signature">"

%s"</string>
    <string name="send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="preferences_vacation_responder_title">Vacation responder</string>
    <string name="vacation_responder_body_hint_text">Message</string>
    <string name="send_to_contacts_text">Send only to my Contacts</string>
    <string name="pick_start_date_title">Starts</string>
    <string name="pick_end_date_title">Ends (Optional)</string>
    <string name="help_and_feedback">Help &amp; feedback</string>
    <string name="account_setup_basics_headline">Email account</string>
    <string name="accounts_welcome">You can set up your account in just a few steps.</string>
    <string name="account_setup_basics_email_label">Email address</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="account_setup_options_headline">Account options</string>
    <string name="welcome_tour_welcome_new_title">Welcome to Gmail</string>
    <string name="welcome_tour_welcome_new_text">One app for all of your email</string>
    <string name="welcome_tour_watch_video">Watch the video</string>
</resources>