<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" style="@style/account_setup_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/headline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_setup_options_headline" style="@style/account_setup_headline" />
            <FrameLayout android:id="@id/setup_fragment_content" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/account_setup_fragment_container" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:background="@color/account_setup_button_bar_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="56.0dip">
        <TextView android:layout_gravity="center_vertical" android:id="@id/previous" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/previous" android:drawableLeft="@drawable/ic_prev" android:drawablePadding="@dimen/setup_nav_button_drawable_padding" android:drawableStart="@drawable/ic_prev" style="@style/account_setup_nav_button" />
        <TextView android:layout_gravity="center_vertical" android:id="@id/manual_setup" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_setup_basics_manual_setup_action" style="@style/account_setup_nav_button" />
        <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <TextView android:layout_gravity="center_vertical" android:id="@id/next" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next" android:drawableRight="@drawable/ic_next" android:drawablePadding="@dimen/setup_nav_button_drawable_padding" android:drawableEnd="@drawable/ic_next" style="@style/account_setup_nav_button" />
    </LinearLayout>
</LinearLayout>